--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "firebase": "^7.24.0",
     "md5": "^2.3.0",
     "mime-types": "^2.1.27",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.9.5",
     "react-icons": "^4.3.1",
